# CRAFT-Katas

./: .gitignore  README.md
C#/TripServiceLegacyKata/Exception/: DependendClassCallDuringUnitTestException.cs  UserNotLoggedInException.cs
C#/TripServiceLegacyKata/Test/: TripServiceTests.cs
C#/TripServiceLegacyKata/Trip/: Trip.cs  TripDAO.cs  TripService.cs
C#/TripServiceLegacyKata/User/: User.cs  UserSession.cs
C++/BowlingGameKata_Result/: CMakeLists.txt
C++/BowlingGameKata_Result/src/: BowlingGame.cpp  BowlingGame.h  CMakeLists.txt
C++/BowlingGameKata_Result/srctest/: BowlingGameTestCase.cpp  CMakeLists.txt
C++/Catch2TestTemplate/: CMakeLists.txt
C++/Catch2TestTemplate/src/: sut.h
C++/Catch2TestTemplate/test/: CMakeLists.txt  testsuite.cpp
C++/DependencyInversion/: CMakeLists.txt  README.md
C++/DependencyInversion/src/: main.cpp
C++/DependencyInversion/src/domain/: StateMachine.cpp  StateMachine.h
C++/DependencyInversion/src/driver/: BarrierActuator.h  BarrierActuatorStub.cpp  BarrierActuatorStub.h
C++/DependencyInversion/src/ui/: display.cpp  display.h
C++/GildedRoseLegacyKata/: CMakeLists.txt
C++/GildedRoseLegacyKata/src/: CMakeLists.txt  GildedRose.cpp  GildedRose.h  Item.h
C++/GildedRoseLegacyKata/srctest/: CMakeLists.txt  GildedRoseTest.cpp
C++/GoogleTestTemplate/: CMakeLists.txt  README.md
C++/GoogleTestTemplate/src/: CMakeLists.txt  main.cpp  sut.cpp
C++/GoogleTestTemplate/test/: CMakeLists.txt  testsuite.cpp
C++/RomanNumeralsKata_Result/: ArabicToRomanNumeralsConverterTestCase.cpp  CMakeLists.txt
C++/StringCalculatorKata_Result/: CMakeLists.txt
C++/StringCalculatorKata_Result/src/: CMakeLists.txt  StringCalculator.cpp  StringCalculator.h
C++/StringCalculatorKata_Result/srctest/: CMakeLists.txt  StringCalculatorTest.cpp
C++/TripServiceLegacyKata/: CMakeLists.txt
C++/TripServiceLegacyKata/backup/: TripService_Original.cpp
C++/TripServiceLegacyKata/src/: CMakeLists.txt  TripService.cpp  TripService.h  TripServiceDependencies.cpp  TripServiceDependencies.h
C++/TripServiceLegacyKata/srctest/: CMakeLists.txt  TripServiceTest.cpp  TripServiceTestadapter.cpp  TripServiceTestadapter.h
C/BufferOverflow/: BufferOverflow.c  README.md
C/DesignPatterns/Observer/: CMakeLists.txt  TimeObserver.h  TimeSource.c  TimeSource.h  TimeSubject.h  Watch.c  Watch.h  main.c
C/DesignPatterns/State/: CMakeLists.txt  RunningState.c  RunningState.h  StopWatch.c  StopWatch.h  StoppedState.c  StoppedState.h  WatchState.c  WatchState.h  main.c
C/GildedRose/GildedRose-MinUnit/: CMakeLists.txt
C/GildedRose/GildedRose-MinUnit/main/: CMakeLists.txt  main.c
C/GildedRose/GildedRose-MinUnit/test/: CMakeLists.txt  GildedRoseTest.c  minunit.h
C/GildedRose/GildedRose-Unity/: CMakeLists.txt
C/GildedRose/GildedRose-Unity/GildedRose/: CMakeLists.txt
C/GildedRose/GildedRose-Unity/test/: CMakeLists.txt
C/GildedRose/GildedRose-Unity/test/GildedRoseTest/: CMakeLists.txt  GildedRoseTest.c
C/TaskScheduler/TaskScheduler-FilesOnly/: config_access.c  config_access.h  config_parser.c  local_config  scheduler.c  scheduler.h
C/TaskScheduler/TaskScheduler-MinUnit/: CMakeLists.txt
C/TaskScheduler/TaskScheduler-MinUnit/config/: CMakeLists.txt  config_parser.h
C/TaskScheduler/TaskScheduler-MinUnit/main/: main.c
C/TaskScheduler/TaskScheduler-MinUnit/scheduler/: CMakeLists.txt
C/TaskScheduler/TaskScheduler-MinUnit/test/: CMakeLists.txt  config_test.c
C/TaskScheduler/TaskScheduler-Unity/: CMakeLists.txt
C/TaskScheduler/TaskScheduler-Unity/main/: CMakeLists.txt
C/TaskScheduler/TaskScheduler-Unity/scheduler/: scheduler.h
C/TaskScheduler/TaskScheduler-Unity/test/: CMakeLists.txt
C/TaskScheduler/TaskScheduler-Unity/test/config_test/: CMakeLists.txt  config_test.c
Java/BreakOut_JavaFX/: pom.xml
Java/BreakOut_JavaFX/data/: breakoutdb.properties  breakoutdb.script
Java/BreakOut_JavaFX/src/main/java/: module-info.java
Java/BreakOut_JavaFX/src/main/resources/: log4j2.properties
Java/Breakout/: pom.xml
Java/DependencyInversionKata/: pom.xml
Java/DependencyInversionKata/src/main/java/coffee/: Coffee.java  CoffeeMachine.java  OverfillException.java
Java/DependencyInversionKata/src/main/java/main/: Main.java
Java/DependencyInversionKata/src/main/java/service/: BeansOrder.java  OrderService.java  Warehouse.java
Java/GildedRoseKata/: pom.xml
Java/GildedRoseKata/src/main/java/de/oose/: GildedRose.java  Item.java
Java/GildedRoseKata/src/test/java/de/oose/: GildedRoseTest.java
Java/LegacyCodeKata/: pom.xml
(+55 files in other folders)
